force-app/main/default/objects/Account/fields/Account_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Account_Credit_Limit__c</fullName>
    <description>Finance Department set Credit Limit for all Customer Accounts</description>
    <inlineHelpText>Finance Department set Credit Limit for all Customer Accounts</inlineHelpText>
    <label>Account Credit Limit</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>