force-app/main/default/objects/Account/fields/Account_Credit_Limit_EURO__c.field-meta.xml
<CustomField>
    <fullName>Account_Credit_Limit_EURO__c</fullName>
    <label>Account Credit Limit - EURO</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>