force-app/main/default/objects/Account/fields/Account_Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Credit_Status__c</fullName>
    <defaultValue>&quot;1 New Account&quot;</defaultValue>
    <label>Account Credit Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>