force-app/main/default/objects/Account/fields/Account_Executive_FL__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_FL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Executive FL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>