force-app/main/default/objects/Account/fields/Account_Industry_Sector__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry_Sector__c</fullName>
    <description>lead sector field mapping</description>
    <label>Account Industry/Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sector_Account_Industry_Fifty</valueSetName>
    </valueSet>
</CustomField>