force-app/main/default/objects/Account/fields/Account_Manager_FL__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_FL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager FL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>