force-app/main/default/objects/Account/fields/Account_Manager_IT__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_IT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager IT</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountITManagers</relationshipName>
    <type>Lookup</type>
</CustomField>