force-app/main/default/objects/Account/fields/Account_Manager_UK__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_UK__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager UK</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountUKManagers</relationshipName>
    <type>Lookup</type>
</CustomField>