force-app/main/default/objects/Account/fields/Account_Owner_Check__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Check__c</fullName>
    <formula>$User.Id =  OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Check</label>
    <type>Checkbox</type>
</CustomField>