force-app/main/default/objects/Account/fields/Account_Owner_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Organisation__c</fullName>
    <description>Gets the owners Sales organisation</description>
    <formula>TEXT(Owner.Sales_Organisation_Name__c)</formula>
    <inlineHelpText>Account Owners Sales Organisation</inlineHelpText>
    <label>Account Owner Organisation</label>
    <type>Text</type>
</CustomField>