force-app/main/default/objects/Account/fields/Agreed_Terms__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Terms__c</fullName>
    <label>Agreed Terms</label>
    <type>TextArea</type>
</CustomField>