force-app/main/default/objects/Account/fields/Area_Manager__c.field-meta.xml
<CustomField>
    <fullName>Area_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vidrala Sales Role</description>
    <label>Area Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>