force-app/main/default/objects/Account/fields/Area_Manager_UK__c.field-meta.xml
<CustomField>
    <fullName>Area_Manager_UK__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Senior Sales Office</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AreaUKManagers</relationshipName>
    <type>Lookup</type>
</CustomField>