force-app/main/default/objects/Account/fields/AS400_Legacy_Encirc_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>AS400_Legacy_Encirc_Account_Number__c</fullName>
    <description>AS400 account number</description>
    <inlineHelpText>Account number on AS400 before moving over to SAP</inlineHelpText>
    <label>AS400 Legacy Encirc Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>