force-app/main/default/objects/Account/fields/CIF__c.field-meta.xml
<CustomField>
    <fullName>CIF__c</fullName>
    <description>VAT Number Required by Spain Vidrala Users</description>
    <label>VAT Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>