force-app/main/default/objects/Account/fields/ClienteVIP__c.field-meta.xml
<CustomField>
    <fullName>ClienteVIP__c</fullName>
    <description>Vidrala require - this is how they score clients at the end of the year i.e. yes we want them</description>
    <label>Scoring</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ESPECIAL</fullName>
            </value>
            <value>
                <fullName>PREFERENTE</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>