force-app/main/default/objects/Account/fields/Commercial_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Contract_Status__c</fullName>
    <inlineHelpText>Roll up from the commercial contract status</inlineHelpText>
    <label>Commercial Contract Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>