force-app/main/default/objects/Account/fields/Commercial_Contract_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Contract_Status_Formula__c</fullName>
    <formula>IF( CONTAINS( Commercial_Contract_Status__c , &apos;Green&apos;) , 
 IMAGE( &apos;/resource/CommercialContractStatusGREEN&apos;, &apos; Green&apos; , 20, 44), 
 IF(CONTAINS( Commercial_Contract_Status__c , &apos;Amber&apos;) , IMAGE( &apos;/resource/CommercialContractStatusAMBER&apos;, &apos; Amber&apos; , 20, 44),  
 IF(CONTAINS( Commercial_Contract_Status__c , &apos;Red&apos;) , IMAGE( &apos;/resource/CommercialContractStatusRED&apos;, &apos; Red&apos; , 20, 44), null) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commercial Contract Status (Formula)</label>
    <type>Text</type>
</CustomField>