force-app/main/default/objects/Account/fields/Contract_Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expire_Date__c</fullName>
    <label>Contract Expire Date</label>
    <type>Date</type>
</CustomField>