force-app/main/default/objects/Account/fields/Contract_Expire_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expire_Date_Formula__c</fullName>
    <formula>TEXT(DAY(Contract_Expire_Date__c))+&quot;-&quot; +TEXT(MONTH( Contract_Expire_Date__c))+&quot;-&quot; +TEXT(YEAR(Contract_Expire_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Expire Date (Formula)</label>
    <type>Text</type>
</CustomField>