force-app/main/default/objects/Account/fields/Credit_Block__c.field-meta.xml
<CustomField>
    <fullName>Credit_Block__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This account has been flagged by Encirc Finance as blocked for credit.</inlineHelpText>
    <label>Credit Block</label>
    <type>Checkbox</type>
</CustomField>