force-app/main/default/objects/Account/fields/Credit_Check_Set_To__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Set_To__c</fullName>
    <description>Used as part of the Quick Action that allows a user to submit an Account for a Credit Check.</description>
    <label>Set to:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>