force-app/main/default/objects/Account/fields/Credit_Comments__c.field-meta.xml
<CustomField>
    <fullName>Credit_Comments__c</fullName>
    <label>Credit Comments</label>
    <type>TextArea</type>
</CustomField>