force-app/main/default/objects/Account/fields/Credit_Form_Attached__c.field-meta.xml
<CustomField>
    <fullName>Credit_Form_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that a Credit Application form has been completed by the customer and uploaded against the account.</inlineHelpText>
    <label>Credit Form Attached</label>
    <type>Checkbox</type>
</CustomField>