force-app/main/default/objects/Account/fields/Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Status__c</fullName>
    <formula>IF ( Credit_Block__c,
     IMAGE(&quot;img/msg_icons/error24.png&quot;,&quot;Blocked!&quot;),
     IF ( Account_Credit_Limit__c &gt; 0,
          IMAGE(&quot;img/msg_icons/confirm24.png&quot;,&quot;Credit OK&quot;),
          IMAGE(&quot;img/msg_icons/warning24.png&quot;,&quot;No check &quot;)
     )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Status</label>
    <type>Text</type>
</CustomField>