force-app/main/default/objects/Account/fields/Current_Financial_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Financial_Year_Revenue__c</fullName>
    <description>summary of current financial year revenue taken from actual sales history</description>
    <inlineHelpText>A sum of current financial year revenue taken from actual sales history</inlineHelpText>
    <label>Current Financial Year Revenue</label>
    <summarizedField>Actual_Sales_History__c.Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>Actual_Sales_History__c.Year__c</field>
        <operation>equals</operation>
        <value>2023</value>
    </summaryFilterItems>
    <summaryForeignKey>Actual_Sales_History__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>