force-app/main/default/objects/Account/fields/Current_Financial_Year_Units__c.field-meta.xml
<CustomField>
    <fullName>Current_Financial_Year_Units__c</fullName>
    <description>summary of current financial year units taken from actual sales history</description>
    <inlineHelpText>A sum of Volumes taken form all &apos;Actual Sales History&apos;s associated to this Account</inlineHelpText>
    <label>Current Financial Year Units</label>
    <summarizedField>Actual_Sales_History__c.Volume_000_s__c</summarizedField>
    <summaryFilterItems>
        <field>Actual_Sales_History__c.Year__c</field>
        <operation>equals</operation>
        <value>2023</value>
    </summaryFilterItems>
    <summaryForeignKey>Actual_Sales_History__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>