force-app/main/default/objects/Account/fields/Current_T_C_Contact_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_T_C_Contact_Expiry_Date__c</fullName>
    <label>Current T&amp;Cs / Contact Expiry Date</label>
    <type>Date</type>
</CustomField>