force-app/main/default/objects/Account/fields/Customer_Lane__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lane__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Lane</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Customer Lane)</relationshipLabel>
    <relationshipName>CustomerLane</relationshipName>
    <type>Lookup</type>
</CustomField>