force-app/main/default/objects/Account/fields/Customer_platform__c.field-meta.xml
<CustomField>
    <fullName>Customer_platform__c</fullName>
    <label>Customer platform</label>
    <type>Url</type>
</CustomField>