force-app/main/default/objects/Account/fields/Customer_Service_IT__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_IT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Service IT</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomerITServices</relationshipName>
    <type>Lookup</type>
</CustomField>