force-app/main/default/objects/Account/fields/Customer_Service_UK__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_UK__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Service UK</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomerUKServices</relationshipName>
    <type>Lookup</type>
</CustomField>