force-app/main/default/objects/Account/fields/Encirc_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Encirc_Account_Number__c</fullName>
    <externalId>true</externalId>
    <label>Encirc Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>