force-app/main/default/objects/Account/fields/Forma_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pago__c</fullName>
    <description>Payment method field used by Vidrala Spain</description>
    <label>Payment method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>