force-app/main/default/objects/Account/fields/Grand_Total_Current_Financial_Year_Tons__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Current_Financial_Year_Tons__c</fullName>
    <description>This value will be rolled up to the Parent Pan European record type as a grand total</description>
    <formula>Current_Financial_Year_Tons__c +  Parent_Current_Financial_Year_Tons__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Sum of the &apos;Current Financial Year Tons&apos;s and the Child &apos;Current Financial Year Tons&apos;</inlineHelpText>
    <label>Grand Total Current Financial Year Tons</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>