force-app/main/default/objects/Account/fields/Grand_Total_Sales_History__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Sales_History__c</fullName>
    <description>This value will be rolled up to the Parent Pan European record type as a grand total</description>
    <formula>Total_Sales_History__c +  Parent_Total_Sales_History__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Sum of the current &apos;Total Sales History&apos; and the Child &apos;Total Sales History&apos;.</inlineHelpText>
    <label>Grand Total Sales History</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>