force-app/main/default/objects/Account/fields/Haulier__c.field-meta.xml
<CustomField>
    <fullName>Haulier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Haulier</label>
    <referenceTo>Haulier__c</referenceTo>
    <relationshipLabel>Haulier Account</relationshipLabel>
    <relationshipName>HaulierAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>