force-app/main/default/objects/Account/fields/Haulier_Comments__c.field-meta.xml
<CustomField>
    <fullName>Haulier_Comments__c</fullName>
    <description>Comments related to haulier</description>
    <inlineHelpText>Haulier Related Comments</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>