force-app/main/default/objects/Account/fields/Historical_Name__c.field-meta.xml
<CustomField>
    <fullName>Historical_Name__c</fullName>
    <inlineHelpText>This field is to be used when an account has changed its name and you want to keep the data together</inlineHelpText>
    <label>Historical Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>