force-app/main/default/objects/Account/fields/Historical_SAP_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Historical_SAP_Account_Number__c</fullName>
    <inlineHelpText>If an account has changed name and has been set up with a new account number put the old one in this field</inlineHelpText>
    <label>Historical SAP Account Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>