force-app/main/default/objects/Account/fields/Minimum_notice_period_for_a_call_off__c.field-meta.xml
<CustomField>
    <fullName>Minimum_notice_period_for_a_call_off__c</fullName>
    <label>Minimum notice period for a call off</label>
    <length>50</length>
    <type>Text</type>
</CustomField>