force-app/main/default/objects/Account/fields/Minimum_notice_period_for_cancellation__c.field-meta.xml
<CustomField>
    <fullName>Minimum_notice_period_for_cancellation__c</fullName>
    <label>Minimum notice period for cancellation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>