force-app/main/default/objects/Account/fields/Nombre_comercial__c.field-meta.xml
<CustomField>
    <fullName>Nombre_comercial__c</fullName>
    <description>Indicar el Nombre cComercial de la cuenta en caso de ser diferente a la Razón social.</description>
    <inlineHelpText>Indicar en este campo el nombre comercial del cliente. En ocasiones la razón social es distinta al nombre comercial, y la búsqueda en Salesforce se hace más complicada.</inlineHelpText>
    <label>Nombre comercial</label>
    <length>50</length>
    <type>Text</type>
</CustomField>