force-app/main/default/objects/Account/fields/OM_SAC_Guia_Cliente__c.field-meta.xml
<CustomField>
    <fullName>OM_SAC_Guia_Cliente__c</fullName>
    <label>Guía gestión cliente</label>
    <type>TextArea</type>
</CustomField>