force-app/main/default/objects/Account/fields/OM_VID_AgreedTerms__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_AgreedTerms__c</fullName>
    <label>Agreed Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZD</fullName>
                <label>Daily Invoicing</label>
            </value>
            <value>
                <fullName>ZM</fullName>
                <label>Monthly Invoicing</label>
            </value>
            <value>
                <fullName>ZQ</fullName>
                <label>Bi-weekly invoicing</label>
            </value>
            <value>
                <fullName>ZS</fullName>
                <label>Weekly invoicing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>