force-app/main/default/objects/Account/fields/OM_VID_Blocked__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer blocked</label>
    <type>Checkbox</type>
</CustomField>