force-app/main/default/objects/Account/fields/OM_VID_ClaseRiesgo__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_ClaseRiesgo__c</fullName>
    <label>Clase de riesgo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z01</fullName>
                <label>Orders new customer 2 years</label>
            </value>
            <value>
                <fullName>Z02</fullName>
                <label>New customer</label>
            </value>
            <value>
                <fullName>Z03</fullName>
                <label>Standard customer</label>
            </value>
            <value>
                <fullName>Z04</fullName>
                <label>High Risk Sales Orders</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>