force-app/main/default/objects/Account/fields/OM_VID_CustomerClass__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_CustomerClass__c</fullName>
    <label>Customer Class</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z1</fullName>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Z2</fullName>
                <label>Distributor</label>
            </value>
            <value>
                <fullName>Z3</fullName>
                <label>Competitor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>