force-app/main/default/objects/Account/fields/OM_VID_GrupoTotalFacturacion__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_GrupoTotalFacturacion__c</fullName>
    <label>Grupo - Total facturación del año</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>