force-app/main/default/objects/Account/fields/OM_VID_GrupoTotalToneladas__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_GrupoTotalToneladas__c</fullName>
    <label>Grupo - Total toneladas del año</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>