force-app/main/default/objects/Account/fields/OM_VID_Industry__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Industry</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Retail</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>B01 Wines</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>B02 Waters</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>B03 Cava, spark,cidr</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>B04 Dairy products</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>B05 Soft and non-alc</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>B06 Spirits alcohol</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>B07 Oils</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>B08 Vinegars</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>B09 Juicesnarrowmout</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>B10 Returnable beers</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>B11 Various</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>B12 Port</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>B13 FAB&apos;s</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>T01 Olives</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>T02 Juiceswidemouth</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>T03 Dairy products</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>T04 Baby Food</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>T05 Preserves</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>T06 Sundries</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>