force-app/main/default/objects/Account/fields/OM_VID_IsDistributorAuto__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_IsDistributorAuto__c</fullName>
    <formula>INCLUDES(OM_VID_CustomerClass__c, &quot;Z2&quot;)</formula>
    <label>Is Distributor</label>
    <type>Checkbox</type>
</CustomField>