force-app/main/default/objects/Account/fields/OM_VID_NIF__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_NIF__c</fullName>
    <label>NIF</label>
    <length>20</length>
    <type>Text</type>
</CustomField>