force-app/main/default/objects/Account/fields/OM_VID_Order_Reason__c.field-meta.xml
<CustomField>
    <fullName>OM_VID_Order_Reason__c</fullName>
    <label>Order Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>vacio</fullName>
                <label>Todos</label>
            </value>
            <value>
                <fullName>105</fullName>
                <label>105 - Devolución por error de carga</label>
            </value>
            <value>
                <fullName>106</fullName>
                <label>106 - Devolución por mercancía defecuosa</label>
            </value>
            <value>
                <fullName>107</fullName>
                <label>107 - Devolución por defectos de embalaje</label>
            </value>
            <value>
                <fullName>108</fullName>
                <label>107 - Devolución por error en la toma de pedido</label>
            </value>
            <value>
                <fullName>109</fullName>
                <label>109 - Devolución p error en pedido del cliente</label>
            </value>
            <value>
                <fullName>110</fullName>
                <label>110 - Devolución por retraso en la entrega</label>
            </value>
            <value>
                <fullName>111</fullName>
                <label>111- Devolución por pedido anulado p cliente</label>
            </value>
            <value>
                <fullName>112</fullName>
                <label>112- Devol por incumplimiento restricciones cte</label>
            </value>
            <value>
                <fullName>114</fullName>
                <label>114 - Devolución por recompra al cliente</label>
            </value>
            <value>
                <fullName>115</fullName>
                <label>115 - Devolución por botellas rotas</label>
            </value>
            <value>
                <fullName>116</fullName>
                <label>116 - Devolución por daños en el transporte</label>
            </value>
            <value>
                <fullName>117</fullName>
                <label>117 - Devolución por diferencia de cantidad</label>
            </value>
            <value>
                <fullName>118</fullName>
                <label>118 - Devolución por muestra gratis</label>
            </value>
            <value>
                <fullName>119</fullName>
                <label>119 - Devolución por diferencia de precio</label>
            </value>
            <value>
                <fullName>121</fullName>
                <label>121 - Devolución por carga palets mal estado</label>
            </value>
            <value>
                <fullName>122</fullName>
                <label>122 - Devolución por gesto comercial</label>
            </value>
            <value>
                <fullName>123</fullName>
                <label>123 - Devolución por calidad preventiva</label>
            </value>
            <value>
                <fullName>124</fullName>
                <label>124 - Devolução em rota /Anulação cliente</label>
            </value>
            <value>
                <fullName>125</fullName>
                <label>125 - Devolução em rota /paletes danificadas</label>
            </value>
            <value>
                <fullName>899</fullName>
                <label>899 - Abono por sobretaxa energética</label>
            </value>
            <value>
                <fullName>900</fullName>
                <label>900 - Abono calidad afecta precio</label>
            </value>
            <value>
                <fullName>901</fullName>
                <label>901 - Abono por anulación CONAI</label>
            </value>
            <value>
                <fullName>902</fullName>
                <label>902 - Abono p indemnización p problems calidad</label>
            </value>
            <value>
                <fullName>903</fullName>
                <label>903 - Abono por defecto de embalaje</label>
            </value>
            <value>
                <fullName>904</fullName>
                <label>904 - Abono por error de carga</label>
            </value>
            <value>
                <fullName>905</fullName>
                <label>905 - Abono por error en la toma de pedido</label>
            </value>
            <value>
                <fullName>906</fullName>
                <label>906 - Abono por diferencia de precio</label>
            </value>
            <value>
                <fullName>907</fullName>
                <label>907 - Abono por liquidación de rappel unitario</label>
            </value>
            <value>
                <fullName>908</fullName>
                <label>908 - Abono p liquidación de rappel p consumo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>